--- a/.hintrc
+++ b/.hintrc
@@ -5,6 +5,13 @@
   "hints": {
     "typescript-config/is-valid": "off",
     "typescript-config/strict": "off",
-    "typescript-config/consistent-casing": "off"
+    "typescript-config/consistent-casing": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off",
+        "link-name": "off"
+      }
+    ]
   }
 }
