feat: implement image upload with Cloudinary integration
- Add drag & drop image upload functionality
- Support both URL input and local file upload
- Integrate Cloudinary for image hosting
- Add file validation (type, size limits)
- Implement loading states and error handling
- Enhance UX with visual feedback and previews

--- a/.hintrc
+++ b/.hintrc
@@ -33,7 +33,8 @@
     "axe/forms": [
       "default",
       {
-        "select-name": "off"
+        "select-name": "off",
+        "label": "off"
       }
     ]
   }
